--- a/js/all/home.html
+++ b/js/all/home.html
@@ -9,12 +9,12 @@
         content="992675398224-933o23nnmp85vdch2t0ftnta6jcbn3ut.apps.googleusercontent.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>STUN</title>
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="ui secondary pointing menu">
             <a class="item">
                 Home
@@ -31,11 +31,15 @@
                 </a>
             </div>
         </div>
-    </header>
+    </header> -->
 
     <div id="main">
-        <img src="image/home1.jpg" alt="">
-        <img src="image/home3.jpg" alt="">
+        <div class="big ui red animated button" tabindex="0">
+            <div class="visible content">Find Doctor</div>
+            <div class="hidden content">
+                <i class="right arrow icon"></i>
+            </div>
+        </div>
     </div>
 </body>
 
