--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
+    <!-- Standard Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,35 +10,39 @@
         content="992675398224-933o23nnmp85vdch2t0ftnta6jcbn3ut.apps.googleusercontent.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+
     <link rel="stylesheet" href="./style.css">
     <title>STUN</title>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id"
-        content="807717109336-b49k4uhkfmvq6jckuv3j4h2t8739e3el.apps.googleusercontent.com">
-    <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
+<div class="body-page">
 
+   <!-- NavBar------------------- -->
+   <div id="NAVBAR">        
+        <div class="pusher">
+            <div class="ui menu asd borderless" style="border-radius: 0!important; border: 0; margin-left: 0px; color: white; font-weight: 400 ;background-color:  rgba(116, 181, 170, 0.801);">
+            <a class="item openbtn">
+                <i class="icon content"></i>
+            </a>
+            <a class="item">Messages</a>
+            <div class="right menu">
+                <div class="item">
+                <div class="ui red button" id="logout-button">Logout</div>
+                </div>
+            </div>
+            </div>
+      </div>         
+    </div>
 
-
-    <!-- NAVBAR ------------------------------------------------------------------------------------------------------- -->
-
-    <!-- END NAVBAR ------------------------------------------------------------------------------------------------------- -->
-
-
-
-
-    <!-- LOGIN FORM ------------------------------------------------------------------------------------------------------- -->
-    <div id="LOGIN" style="background-image: image/bg" ;">
-
-        <div class="logo">
-            <img src="image/loginlogo.png" style="width: 70%; margin: 100px;">
+    <!-- LOGIN-FORM ------------------- -->
+    <div id="LOGIN">
+        <div class="logo" id="logos">
+            <img src="./src/logos.png" style="width: 70%; margin: 100px;">
         </div>
-
-
         <div class="logform">
             <div class="ui center aligned basic segment" style="width:45%;">
                 <h2 style="font-size: 20px; text-align:center; color: white; font-weight: bolder;">
@@ -49,21 +53,21 @@
                         <div class="field">
                             <div class="ui left icon input" style="height: 50px;">
                                 <i class="user icon"></i>
-                                <input type="text" name="email" placeholder="E-mail address">
+                                <input type="text" name="email" placeholder="E-mail address" id="email-login">
                             </div>
                         </div>
                         <div class="field">
                             <div class="ui left icon input" style="height: 50px;">
                                 <i class="lock icon"></i>
-                                <input type="password" name="password" placeholder="Password">
+                                <input type="password" name="password" placeholder="Password" id="password-login">
                             </div>
                         </div>
-                        <div class="ui fluid big teal submit button">Login</div>
+                        <div class="ui fluid big teal submit button" id="button-login">Login</div>
                     </div>
                     <div class="ui error message"></div>
                 </form>
                 <div class="ui message" style="text-align: center;">
-                    New to us? <a href="#">Sign Up</a>
+                    New to us? <a href="#" id="register-page">Sign Up</a>
                 </div>
                 <div class="ui horizontal divider">
                     Or
@@ -73,43 +77,33 @@
                 </button>
             </div>
         </div>
-
     </div>
-    <!-- END LOGIN FORM -------------------------------------------------------------------------------------------------------  -->
 
-
-
-
-
-    <!-- REGISTER FORM ------------------------------------------------------------------------------------------------------- -->
-
-    <div id="LOGIN">
-
-        <div class="logform">
-
+    <!-- REGISTER FORM ---------------------------------------------------------------------------- -->
+    <div id="REGISTER">
+        <div class="regform">
             <div class="ui center aligned basic segment" style="width:45%;">
                 <h2 style="font-size: 20px; text-align:center; color:white; font-weight: bolder;">
                     <strong> Create an Account </strong>
                 </h2>
-
                 <form class="ui big form">
                     <div class="ui stacked segment">
                         <div class="field">
                             <div class="ui left icon input" style="height: 50px;">
                                 <i class="user md icon"></i>
-                                <input type="text" name="username" placeholder="Username">
+                                <input type="text" name="username" placeholder="Username" id="username-register">
                             </div>
                         </div>
                         <div class="field">
                             <div class="ui left icon input" style="height: 50px;">
                                 <i class="envelope icon"></i>
-                                <input type="text" name="email" placeholder="E-mail address">
+                                <input type="text" name="email" placeholder="E-mail address" id="email-register">
                             </div>
                         </div>
                         <div class="field">
                             <div class="ui left icon input" style="height: 50px;">
                                 <i class="lock icon"></i>
-                                <input type="password" name="password" placeholder="Password">
+                                <input type="password" name="password" placeholder="Password" id="password-register">
                             </div>
                         </div>
                         <div class="ui checkbox">
@@ -118,26 +112,22 @@
                         </div>
                         <br>
                         <br>
-                        <div class="ui fluid large teal submit button">register</div>
+                        <div class="ui fluid large teal submit button" id="button-register">register</div>
                     </div>
                     <div class="ui error message"></div>
                 </form>
+                <div class="ui message" style="text-align: center;">
+                        Already have account? <a href="#" id="login-page">Signin</a>
+                </div>
             </div>
         </div>
-
-        <div class="logo">
-            <img src="image/reglogo.png" style="width: 80%; margin: 100px;">
+        <div class="logo" id="logos-register">
+            <img src="./src/logos.png" style="width: 70%; margin: 100px;">
         </div>
-
     </div>
-    <!-- END REGISTER FORM -------------------------------------------------------------------------------------------------------  -->
 
 
-
-
-
-
-
+ 
     <!-- MAIN PAGE -------------------------------------------------------------------------------------------------------  -->
     <div id="main">
         <div class="big ui red animated button" tabindex="0">
@@ -172,9 +162,62 @@
         crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
 </body>
+
 <style>
 
+#LOGIN {
+    color: whitesmoke;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
 
+#REGISTER {
+    color: whitesmoke;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.logo {
+    color: whitesmoke;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.logform{
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(116, 181, 170, 0.801);
+}
+
+.regform {
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(116, 181, 170, 0.801);
+}
 </style>
 
 </html>
