--- a/index.html
+++ b/index.html
@@ -175,13 +175,14 @@
         <!-- SEARCH PAGE ------------------------------------------------------------------------------------------------------- -->
 
         <!-- DOCTOR PAGE -------------------------------------------------------------------------------------------------------  -->
-        <div id="DOCTORS">
-            <h1 style="color: teal; background-color: white; top: 10px;">HERE THEY ARE</h1>
+        <div class="DOCTOR">
+            <h1 style="color: teal; background-color: white; top: 50px; margin: 10px;">HERE THEY ARE</h1>
             <br>
             <div id="doctors">
-                <div class="ui card" style=" width:200px">
+
+                <div class="ui card" style=" width:200px; height: 150px; margin: 20px;">
                     <div class="image">
-                        <img src="/images/avatar2/large/kristy.png">
+                        <img src="https://semantic-ui.com/images/avatar/large/jenny.jpg">
                     </div>
                     <div class="content" style=" height:100px">
                         <a class="header" style=" width:200px">FIRSTNAME LASTNAME TITLE</a>
@@ -203,19 +204,18 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- DOCTOR PAGE ------------------------------------------------------------------------------------------------------- -->
+            <!-- DOCTOR PAGE ------------------------------------------------------------------------------------------------------- -->
 
 
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-        <script src="./js/main.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
+            <script src="./js/main.js"></script>
 </body>
 
 <style>
